rustidy/tests/parse-error/whitespace_no_comment_end/output.txt
Error at tests/parse-error/whitespace_no_comment_end/input.rs:1:3:
    |
  1 | /*
    |   ^
└─Expected a crate at 1:1
  └─Expected `*/` after `/*`
